--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,22 @@ services:
     volumes:
       - .:/var/www/html
     working_dir: /var/www/html
-    command: php -S 0.0.0.0:8000 -t .
+    depends_on:
+      - mysql
+    command: tail -f /dev/null
+    # Web server için: php -S 0.0.0.0:8000 -t .
 
   mysql:
     image: mysql:8.0
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: testdb
+      MYSQL_USER: testuser
+      MYSQL_PASSWORD: testpass
     ports:
       - "3306:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+
+volumes:
+  mysql_data:
